syntax = "proto3";
package auth.v1;

message GetTokensRequest {
  string resource_id = 1;
  optional string peer_id = 2;
}

message GetTokensResponse {
  repeated Token tokens = 1;
}

message Token {
  string resource_id = 1;
  string peer_id = 2;
  uint64 ttl = 3;
}

service AuthService {
  rpc GetTokens(GetTokensRequest) returns (GetTokensResponse);
}
